--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -26,7 +26,7 @@
 									{{ form_row(form.content, {'attr': {'class': 'form-control'}}) }}
 								</div>
 							</div>
-							<button class="btn btn-secondary mt-3 mb-10" type="submit">
+							<button class="custom-btn  mt-3 mb-10" type="submit">
 								<span>Nous contacter</span>
 							</button>
 							{{ form_end(form) }}
