--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4,14 +4,50 @@
   list-style: none;
 }
 
-.separated-list {
-  list-style-type: none;
+body {
+  position: relative;
+  height: 100%;
+  text-decoration: none;
+  list-style: none;
 }
 
-.separated-list li:not(:last-child)::after {
-  content: " . ";
-  white-space: pre-wrap;
-  margin-bottom: 10px;
+/*--------------------------------------------------------------
+# navbar
+--------------------------------------------------------------*/
+.navbar {
+  box-shadow: 0px 0px 10px 0.1rem rgba(0, 0, 0, 0.479);
+  box-shadow: 0px 0px 0.1rem black;
+  text-align: center;
+}
+
+.navbar-nav {
+  display: inline-block;
+  padding: 0;
+}
+
+.nav-item {
+  display: inline-block;
+  margin: 0 10px;
+}
+
+.nav-item a {
+  text-decoration: none;
+  color: #333;
+}
+
+.fusion-secondary-header {
+  color: #747474;
+  font-size: 12px;
+  height: 30px;
+  background-color: #3e3e3e;
+  display: flex;
+  justify-content: center;
+}
+
+@media only screen and (max-width: 768px) {
+  .fusion-secondary-header {
+    display: none;
+  }
 }
 
 .bd-placeholder-img {
@@ -29,30 +65,331 @@
   }
 }
 
-body {
-  position: relative;
-  height: 100%;
-  text-decoration: none;
-  list-style: none;
+.navbar-custom {
+  background-color: #fffdd0;
 }
 
+.navbar-custom .navbar-brand,
+.navbar-custom .nav-link,
+.navbar-custom .navbar-toggler-icon {
+  color: #000;
+}
+
+.navbar-custom .nav-link.active {
+  color: #555;
+}
+
+.navbar-custom .nav-link {
+  position: relative; /* Pour permettre l'utilisation de pseudo-éléments */
+  display: inline-block; /* Pour les effets de survol */
+  text-decoration: none !important; /* Pas de sous-lignement par défaut */
+  color: #000 !important; /* Couleur noire pour les liens */
+}
+
+.navbar-custom .nav-link::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.1);
+  z-index: -1;
+  transform: scaleX(0);
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+
+.navbar-custom .nav-link:hover::before {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+  background: rgba(0, 0, 0, 0.1);
+}
+
+.navbar-custom .nav-link:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+}
 /*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
-.footer a {
-  color: red;
+.footer-custom {
+  background-color: #fffdd0;
 }
+
+.footer-custom .text-dark {
+  color: #000 !important;
+}
+
+.footer-custom a {
+  text-decoration: none !important;
+  color: #000 !important;
+  position: relative;
+  display: inline-block;
+}
+
+.footer-custom a::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.1);
+  transform: scaleX(0);
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+
+.footer-custom a:hover::before {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+  background: rgba(0, 0, 0, 0.097);
+}
+
+.footer-custom a:hover {
+  background-color: rgba(0, 0, 0, 0.1); /* Transparent noir pour le hover */
+}
+
+.footer-custom .copyright {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
 /*--------------------------------------------------------------
-# Product page
+# Customisation des boutons (bouton général)
+--------------------------------------------------------------*/
+.custom-btn {
+  background-color: #28a745;
+  border: 2px solid #28a745;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 8px;
+  font-size: 16px;
+  text-decoration: none;
+  display: inline-block;
+  transition: background-color 0.3s, border-color 0.3s;
+}
+
+.custom-btn:hover {
+  background-color: #031206;
+  border-color: #051a0a; /* Couleur de la bordure au survol */
+}
+
+/*--------------------------------------------------------------
+# Customisation des boutons (boutons des card produits)
+--------------------------------------------------------------*/
+.custom-btn-primary {
+  background-color: #007bff; /* Couleur de fond */
+  border-color: #007bff; /* Couleur de bordure */
+  color: white; /* Couleur du texte */
+  border-radius: 5px; /* Coins arrondis */
+  padding: 8px 16px; /* Espacement interne */
+  font-size: 14px; /* Taille de la police */
+  text-decoration: none; /* Supprime la décoration du texte */
+  display: inline-block; /* Affichage en ligne */
+  transition: background-color 0.3s, border-color 0.3s; /* Effet de transition */
+}
+
+.custom-btn-primary:hover {
+  background-color: #0056b3; /* Couleur de fond au survol */
+  border-color: #0056b3; /* Couleur de bordure au survol */
+}
+
+.custom-btn-success {
+  background-color: #0d461a; /* Couleur de fond */
+  border-color: #28a745; /* Couleur de bordure */
+  color: white; /* Couleur du texte */
+  border-radius: 5px; /* Coins arrondis */
+  padding: 8px 16px; /* Espacement interne */
+  font-size: 14px; /* Taille de la police */
+  text-decoration: none; /* Supprime la décoration du texte */
+  display: inline-block; /* Affichage en ligne */
+  transition: background-color 0.3s, border-color 0.3s; /* Effet de transition */
+}
+
+.custom-btn-success:hover {
+  background-color: #eed114; /* Couleur de fond au survol */
+  border-color: #218838; /* Couleur de bordure au survol */
+}
+
+/*--------------------------------------------------------------
+# Page product_display
+--------------------------------------------------------------*/
+.text-custom {
+  color: #333;
+}
+
+/* Style général pour les boutons avec texte jaune */
+.btn {
+  color: #ffd700; /* Couleur du texte en jaune */
+  border-color: transparent; /* Bordure transparente pour les boutons */
+  background-color: transparent; /* Fond transparent pour les boutons */
+  border-radius: 0.25rem; /* Coins arrondis */
+  padding: 0.5rem 1rem; /* Espacement interne */
+  text-align: center; /* Alignement du texte */
+}
+
+/* Style spécifique pour le bouton "Tout effacer" */
+.btn-reset {
+  background-color: transparent; /* Fond transparent pour le bouton "Tout effacer" */
+  border: 1px solid #ffd700; /* Bordure jaune */
+  color: #ffd700; /* Couleur du texte jaune */
+}
+
+.btn-reset:hover {
+  background-color: #ffd700; /* Fond jaune au survol */
+  color: #000; /* Couleur du texte noire au survol */
+}
+
+/* Style spécifique pour le bouton "+" */
+.btn-categories {
+  color: #ffd700; /* Couleur du texte jaune */
+  border: 1px solid #ffd700; /* Bordure jaune */
+}
+
+.btn-categories:hover {
+  background-color: #ffd700; /* Fond jaune au survol */
+  color: #000; /* Couleur du texte noire au survol */
+}
+
+/* Style spécifique pour le bouton "Filtrer" */
+.btn-filter {
+  background-color: #ffd700; /* Fond jaune */
+  color: #000; /* Couleur du texte noire */
+  border: 1px solid #ffd700; /* Bordure jaune */
+}
+
+.btn-filter:hover {
+  background-color: #ffc107; /* Fond jaune clair au survol */
+  border-color: #ffc107; /* Bordure jaune clair */
+}
+
+/*--------------------------------------------------------------
+# Pagination
 --------------------------------------------------------------*/
 
+.pagination .page-link {
+  border-radius: 0.25rem;
+  padding: 0.5rem 1rem;
+  margin: 0 0.1rem;
+  color: #000;
+}
+
+.pagination .page-item.active .page-link {
+  background-color: rgba(0, 0, 0, 0.1);
+  border-color: #bd2a2a;
+  color: rgb(200, 155, 51);
+}
+
+.pagination .page-item.disabled .page-link {
+  color: #65014b;
+  cursor: not-allowed;
+}
+
+/* Style de base pour les boutons de tri */
+.btn {
+  display: inline-flex;
+  align-items: center;
+  padding: 0.5rem 1rem;
+  border-radius: 0.25rem;
+  text-decoration: none;
+  color: #333;
+  background-color: #f8f9fa;
+  border: 1px solid #ddd;
+}
+
+/* Style pour le bouton de tri actif */
+.btn.active {
+  background-color: #007bff;
+  color: white;
+  border-color: #007bff;
+}
+
+/* Style pour le bouton de tri non trié */
+.btn:not(.active) {
+  color: #007bff;
+}
+
+/* Style pour les icônes de tri */
+.btn i {
+  margin-right: 0.5rem;
+  font-size: 1rem;
+}
+
+/*--------------------------------------------------------------
+# Filters
+--------------------------------------------------------------*/
+.box {
+  padding: 10px;
+}
+
+#collapseSections,
+#collapseNavigation {
+  height: 300px;
+  margin-right: 0.3rem !important;
+  overflow-y: scroll;
+}
+
+#collapseSections::-webkit-scrollbar,
+#collapseNavigation::-webkit-scrollbar {
+  width: 6px;
+}
+
+#collapseSections::-webkit-scrollbar-thumb,
+#collapseNavigation::-webkit-scrollbar-thumb {
+  background-color: #333;
+  border-radius: 2px;
+}
+
+#collapseSections::-webkit-scrollbar-track,
+#collapseNavigation::-webkit-scrollbar-track {
+  background-color: #ddd;
+  border-radius: 2px;
+}
+
+.box-label {
+  color: #1d2939;
+  font-size: 0.9rem;
+  font-weight: 800;
+}
+
+.box-label .btn {
+  background-color: #fff;
+  padding: 0;
+}
+
+.box-label .btn:focus {
+  box-shadow: none;
+}
+
+.box-label .btn:active,
+.box-label .btn:hover {
+  color: #212529;
+  background-color: #fff;
+  border-color: transparent;
+}
+
+.filter {
+  display: block;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 20px;
+}
+
+.js-filter-sorting {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start; /* Aligne le contenu à gauche */
+}
+
+/*--------------------------------------------------------------
+# Page product_index
+--------------------------------------------------------------*/
 .product-item {
   margin-bottom: 1.5em;
 }
 
 .product-item h5 {
   text-transform: uppercase;
-  text-align: center;
   font-size: 0.9em;
   margin-bottom: 0.1em;
 }
@@ -126,40 +463,35 @@ strong {
 } */
 
 .card {
-  width: 100%; /* Assure que la carte occupe toute la largeur du carousel */
-  max-width: 500px; /* Limite la largeur de la carte */
-  border: 1px solid #ddd; /* Bordure légère autour de la carte */
-  border-radius: 0.5rem; /* Coins arrondis */
+  width: 100%;
+  max-width: 500px;
+  border: 1px solid #ddd;
+  border-radius: 0.5rem;
 }
 
 .card-body {
-  padding: 1.5rem; /* Espacement interne de la carte */
+  padding: 1.5rem;
 }
 
 .rating {
-  color: #f39c12; /* Couleur des étoiles */
+  color: #f39c12;
 }
 
 .star {
-  font-size: 1.2rem; /* Taille des étoiles */
+  font-size: 1.2rem;
 }
 
 .carousel-control-prev,
 .carousel-control-next {
-  width: 5%; /* Ajuste la largeur des contrôles */
+  width: 5%;
 }
 
 .carousel-control-prev-icon,
 .carousel-control-next-icon {
-  background-color: rgba(
-    0,
-    0,
-    0,
-    0.5
-  ); /* Fond semi-transparent pour les icônes */
-  border-radius: 50%; /* Coins arrondis pour les boutons de contrôle */
-  width: 3rem; /* Largeur des boutons de contrôle */
-  height: 3rem; /* Hauteur des boutons de contrôle */
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 50%;
+  width: 3rem;
+  height: 3rem;
 }
 
 /*--------------------------------------------------------------
@@ -248,160 +580,42 @@ form:invalid button.btn-dark[type="submit"],
   color: #53595c !important;
 }
 
-.footer-custom {
-  text-align: center;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  background-color: rgb(222, 234, 248);
-  margin-top: 10em;
-  box-shadow: 5px 5px 7px 0.1rem black;
-}
-
-/*--------------------------------------------------------------
-# navbar
---------------------------------------------------------------*/
-
-.navbar {
-  box-shadow: 0px 0px 10px 0.1rem rgba(0, 0, 0, 0.479);
-  box-shadow: 0px 0px 0.1rem black;
-  text-align: center; /* Pour centrer horizontalement */
-}
-
-.navbar-nav {
-  display: inline-block;
-  padding: 0;
-}
-
-.nav-item {
-  display: inline-block;
-  margin: 0 10px; /* Espacement entre les éléments de la navbar */
-}
-
-.nav-item a {
-  text-decoration: none;
-  color: #333; /* Couleur du texte des liens */
-}
-
-.fusion-secondary-header {
-  color: #747474;
-  font-size: 12px;
-  height: 30px;
-  background-color: #3e3e3e;
-  display: flex;
-  justify-content: center;
-}
-
-@media only screen and (max-width: 768px) {
-  .fusion-secondary-header {
-    display: none;
-  }
-}
-
-.bd-placeholder-img {
-  font-size: 1.125rem;
-  text-anchor: middle;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-@media (min-width: 768px) {
-  .bd-placeholder-img-lg {
-    font-size: 3.5rem;
-  }
-}
-
-.product-item {
-  margin-bottom: 1.5em;
-}
-
-.product-item h5 {
-  text-transform: uppercase;
-  font-size: 0.9em;
-  margin-bottom: 0.1em;
-}
-
-.product-subtitle {
-  display: block;
-  margin-bottom: 0.2em;
-}
-
-.product-price {
-  font-weight: bold;
-}
-
 /*--------------------------------------------------------------
 # Card
 --------------------------------------------------------------*/
 .embed-responsive .card-img-top {
   object-fit: cover;
 }
+
 /*--------------------------------------------------------------
-# Filters
+# Advise page
 --------------------------------------------------------------*/
-.box {
-  padding: 10px;
+/* Style pour le bouton Lire plus */
+.btn-read-more {
+  display: inline-block;
+  background-color: #007bff; /* Couleur de fond bleue */
+  color: #ffeb00; /* Couleur du texte jaune */
+  padding: 0.5rem 1rem; /* Espacement interne */
+  border-radius: 0.25rem; /* Coins arrondis */
+  text-decoration: none; /* Retirer la sous-ligne du lien */
+  font-weight: bold; /* Texte en gras */
+  transition: background-color 0.3s ease; /* Transition pour l'effet de survol */
 }
 
-#collapseSections,
-#collapseNavigation {
-  height: 300px;
-  margin-right: 0.3rem !important;
-  overflow-y: scroll;
+.btn-read-more:hover {
+  background-color: #0056b3; /* Couleur de fond bleue plus foncée au survol */
+  color: #fff; /* Couleur du texte blanche au survol */
 }
 
-#collapseSections::-webkit-scrollbar,
-#collapseNavigation::-webkit-scrollbar {
-  width: 6px;
+/* Style pour les liens hypertextes */
+a {
+  color: #007bff; /* Couleur du texte des liens */
+  text-decoration: none; /* Retirer la sous-ligne du lien */
+  transition: color 0.3s ease; /* Transition pour l'effet de survol */
 }
 
-#collapseSections::-webkit-scrollbar-thumb,
-#collapseNavigation::-webkit-scrollbar-thumb {
-  background-color: #333;
-  border-radius: 2px;
-}
-
-#collapseSections::-webkit-scrollbar-track,
-#collapseNavigation::-webkit-scrollbar-track {
-  background-color: #ddd;
-  border-radius: 2px;
-}
-
-.box-label {
-  color: #1d2939;
-  font-size: 0.9rem;
-  font-weight: 800;
-}
-
-.box-label .btn {
-  background-color: #fff;
-  padding: 0;
-}
-
-.box-label .btn:focus {
-  box-shadow: none;
-}
-
-.box-label .btn:active,
-.box-label .btn:hover {
-  color: #212529;
-  background-color: #fff;
-  border-color: transparent;
-}
-
-.filter {
-  display: block;
-  position: -webkit-sticky;
-  position: sticky;
-  top: 20px;
-}
-
-.js-filter-sorting {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start; /* Aligne le contenu à gauche */
+a:hover {
+  color: #0056b3; /* Couleur du texte des liens au survol */
 }
 
 /*--------------------------------------------------------------
@@ -558,6 +772,21 @@ thead {
 .featurette .col-md-5 {
   display: flex;
   align-items: center;
+}
+
+.bd-placeholder-img {
+  font-size: 1.125rem;
+  text-anchor: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+@media (min-width: 768px) {
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
+  }
 }
 
 /*--------------------------------------------------------------
