--- a/templates/_partials/_filter.html.twig
+++ b/templates/_partials/_filter.html.twig
@@ -1,11 +1,11 @@
 {{ form_start(form, {'attr': {'class': 'filter js-filter-form'}}) }}
-<div class="spinner-border js-loading" role="status" aria-hidden="true" style="display: none">
+<div class="spinner-border js-loading" role="status" aria-hidden="true" style="display: none;">
 	<span class="visually-hidden">Loading...</span>
 </div>
 <div class="box border-top border-bottom ps-1">
 	<div class="box-label text-uppercase d-flex align-items-center justify-content-between">
 		Filtres
-		<button type="submit" class="btn btn-link btn-sm" id="resetBtn">Tout effacer</button>
+		<button type="submit" class="btn btn-link btn-sm btn-reset" id="resetBtn">Tout effacer</button>
 	</div>
 </div>
 <div class="box border-bottom ps-1">
@@ -16,7 +16,7 @@
 <div class="box border-top border-bottom ps-1">
 	<div class="box-label text-uppercase d-flex align-items-center">
 		Catégories
-		<button class="btn ms-auto" type="button" data-bs-toggle="collapse" href="#collapseCategories" aria-expanded="false" aria-controls="collapseCategories">
+		<button class="btn btn-categories ms-auto" type="button" data-bs-toggle="collapse" href="#collapseCategories" aria-expanded="false" aria-controls="collapseCategories">
 			<span class="fas fa-plus"></span>
 		</button>
 	</div>
@@ -24,7 +24,6 @@
 		{{ form_row(form.categories) }}
 	</div>
 </div>
-
 <div class="box border-bottom ps-1 pb-3">
 	<div class="box-label text-uppercase d-flex align-items-center">
 		Prix
@@ -48,6 +47,5 @@
 	</div>
 	<div id="price-slider" data-min="{{ minPrice }}" data-max="{{ maxPrice }}"></div>
 </div>
-
-
-<button class="btn btn-outline-success w-100 mt-3">Filtrer</button></script>
+<button class="btn btn-filter w-100 mt-3" type="submit">Filtrer</button>
+{{ form_end(form) }}
