--- a/templates/product/display.html.twig
+++ b/templates/product/display.html.twig
@@ -13,7 +13,7 @@
 			</div>
 			<div class="col-md-9 mt-5 mt-md-0">
 				<div class="d-flex justify-content-between align-items-center mb-2">
-					<div class="fw-bold fs-4 text-primary">
+					<div class="fw-bold fs-4 text-custom">
 						{{ totalItems }}
 						Résultats
 					</div>
