--- a/templates/shared/_footer.html.twig
+++ b/templates/shared/_footer.html.twig
@@ -1,8 +1,6 @@
-<!-- Remove the container if you want to extend the Footer to full width. -->
-
-
+<!-- Footer -->
 <footer
-	class="bg-light text-center text-lg-start text-dark">
+	class="footer-custom text-center text-lg-start text-dark">
 	<!-- Grid container -->
 	<div
 		class="container p-4">
@@ -11,14 +9,10 @@
 			class="row my-4">
 			<!--Grid column-->
 			<div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-
 				<div class="rounded-circle bg-white shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto" style="width: 150px; height: 150px;">
 					<img src="" height="250" alt="" loading="lazy"/>
 				</div>
-
-				<p class="text-center">Apicultrice et productrice de plantes médicales pour huiles essentielles
-				</p>
-
+				<p class="text-center">Apicultrice et productrice de plantes médicales pour huiles essentielles</p>
 				<ul class="list-unstyled d-flex flex-row justify-content-center">
 					<li>
 						<a class="text-dark px-2" href="#!">
@@ -36,32 +30,32 @@
 						</a>
 					</li>
 				</ul>
-
 			</div>
 			<!--Grid column-->
 
 			<!--Grid column-->
 			<div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-				<h5 class="text-uppercase mb-4">Liens utils</h5>
-
+				<h5 class="text-uppercase mb-4">Liens utiles</h5>
 				<ul class="list-unstyled">
 					<li class="mb-2">
 						<a href="{{ path('product_display') }}" class="text-dark">
-							<i class="fa-brands fa-forumbee pe-2"></i>
-							Boutique en ligne</a>
+							<i class="fa-brands fa-forumbee pe-2"></i>Boutique en ligne
+						</a>
 					</li>
 					<li class="mb-2">
 						<a href="{{ path('advise') }}" class="text-dark">
-							<i class="fa-brands fa-forumbee pe-2"></i>
-							Conseils d'utilisation</a>
+							<i class="fa-brands fa-forumbee pe-2"></i>Conseils d'utilisation
+						</a>
 					</li>
 					<li class="mb-2">
 						<a href="{{ path('home_cgv') }}" class="text-dark">
-							<i class="fa-brands fa-forumbee pe-2"></i>Conditions générales de ventes</a>
+							<i class="fa-brands fa-forumbee pe-2"></i>Conditions générales de ventes
+						</a>
 					</li>
 					<li class="mb-2">
 						<a href="{{ path('home_legal') }}" class="text-dark">
-							<i class="fa-brands fa-forumbee pe-2"></i>Mentions légales</a>
+							<i class="fa-brands fa-forumbee pe-2"></i>Mentions légales
+						</a>
 					</li>
 				</ul>
 			</div>
@@ -70,15 +64,16 @@
 			<!--Grid column-->
 			<div class="col-lg-3 col-md-6 mb-4 mb-md-0">
 				<h5 class="text-uppercase mb-4">Où trouver mes produits ?</h5>
-
 				<ul class="list-unstyled">
 					<li class="mb-2">
 						<a href="{{ path('home_pdv') }}" class="text-dark">
-							<i class="fa-brands fa-forumbee pe-2"></i>Liste des points de ventes</a>
+							<i class="fa-brands fa-forumbee pe-2"></i>Liste des points de ventes
+						</a>
 					</li>
 					<li class="mb-2">
 						<a href="{{ path('home_distributeur') }}" class="text-dark">
-							<i class="fa-brands fa-forumbee pe-2"></i>Devenir distributeur</a>
+							<i class="fa-brands fa-forumbee pe-2"></i>Devenir distributeur
+						</a>
 					</li>
 				</ul>
 			</div>
@@ -87,19 +82,21 @@
 			<!--Grid column-->
 			<div class="col-lg-3 col-md-6 mb-4 mb-md-0">
 				<h5 class="text-uppercase mb-4">Contact</h5>
-
 				<ul class="list-unstyled">
 					<li>
 						<p>
-							<i class="fas fa-map-marker-alt pe-2"></i>Faouret, 47330 Bias</p>
+							<i class="fas fa-map-marker-alt pe-2"></i>Faouret, 47330 Bias
+						</p>
 					</li>
 					<li>
 						<p>
-							<i class="fas fa-phone pe-2"></i>+ xx xx xx xx xx</p>
+							<i class="fas fa-phone pe-2"></i>+ xx xx xx xx xx
+						</p>
 					</li>
 					<li>
 						<p>
-							<i class="fas fa-envelope pe-2 mb-0"></i>contact@example.com</p>
+							<i class="fas fa-envelope pe-2 mb-0"></i>contact@example.com
+						</p>
 					</li>
 				</ul>
 			</div>
@@ -110,12 +107,8 @@
 	<!-- Grid container -->
 
 	<!-- Copyright -->
-	<div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+	<div class="text-center p-3 copyright">
 		© 2024 Copyright: VIGNERON
-
 	</div>
 	<!-- Copyright -->
 </footer>
-
-
-<!-- End of .container -->
