--- a/templates/shared/_navbar.html.twig
+++ b/templates/shared/_navbar.html.twig
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg bg-light" data-bs-theme="light">
+<nav class="navbar navbar-expand-lg navbar-custom" data-bs-theme="light">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="{{ path('homepage') }}">MarieSHope</a>
+		<a class="navbar-brand" href="{{ path('homepage') }}">Essence et Nectar</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -15,7 +15,7 @@
 					<a class="nav-link" href="{{ path('product_display') }}">Boutique en ligne</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="{{ path('advise') }}">Conseils d'utilisations</a>
+					<a class="nav-link" href="{{ path('advise') }}">Conseils d'utilisation</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="{{ path('contact_index') }}">Contact</a>
@@ -40,19 +40,19 @@
 							<small class="text-secondary">({{ app.user.firstname}})</small>
 						</a>
 					</li>
-				</li>
-				<li class="nav-item active">
-					<a class="nav-link" href="{{ path('security_logout') }}">Déconnexion</a>
-				</li>
-			{% else %}
-				<li class="nav-item active">
-					<a class="nav-link" href="{{ path('register') }}">Inscription</a>
-				</li>
+					<li class="nav-item active">
+						<a class="nav-link" href="{{ path('security_logout') }}">Déconnexion</a>
+					</li>
+				{% else %}
+					<li class="nav-item active">
+						<a class="nav-link" href="{{ path('register') }}">Inscription</a>
+					</li>
 
-				<li class="nav-item active">
-					<a class="nav-link" href="{{ path('security_login') }}">Connexion</a>
-				</li>
-			{% endif %}
-		</ul>
-	</ul>
-</div></nav>
+					<li class="nav-item active">
+						<a class="nav-link" href="{{ path('security_login') }}">Connexion</a>
+					</li>
+				{% endif %}
+			</ul>
+		</div>
+	</div>
+</nav>
