--- a/templates/home/distributor.html.twig
+++ b/templates/home/distributor.html.twig
@@ -28,7 +28,7 @@
 						</div>
 						<div class="row">
 							<div class="col-md-6 mb-3">
-								{{ form_row(form.email, {'attr': {'class': 'form-control mb-3', 'placeholder': 'contact@essence et Nectar.fr'}}) }}
+								{{ form_row(form.email, {'attr': {'class': 'form-control mb-3', 'placeholder': 'contact@aromielis.fr'}}) }}
 							</div>
 							<div class="col-md-6 mb-3">
 								{{ form_row(form.phone, {'attr': {'class': 'form-control mb-3', 'placeholder': '01 02 03 04 05'}}) }}
