--- a/public/assets/css/carousel.css
+++ b/public/assets/css/carousel.css
@@ -1,7 +1,6 @@
 /* GLOBAL STYLES
 -------------------------------------------------- */
 /* Padding below the footer and lighter body text */
-
 body {
   padding-bottom: 3rem;
   color: #5a5a5a;
@@ -9,11 +8,26 @@ body {
 
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
+#myCarousel {
+  width: 100%;
+  max-width: 100%;
+  margin: 0 auto; /* Centrer le carousel si nécessaire */
+}
 
-/* Carousel base class */
+.carousel-item {
+  width: 100%;
+  height: 32rem; /* Assure une hauteur constante pour les éléments du carousel */
+}
+
+.carousel-inner {
+  width: 100%;
+  max-width: 100%;
+}
+
 .carousel {
   margin-bottom: 4rem;
 }
+
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
   bottom: 3rem;
@@ -21,15 +35,13 @@ body {
 }
 
 /* Declare heights because of positioning of img element */
-.carousel-item {
-  height: 32rem;
-}
 .carousel-item > img {
   position: absolute;
   top: 0;
   left: 0;
-  min-width: 100%;
+  width: 100%;
   height: 32rem;
+  object-fit: cover; /* Assure que l'image couvre toute la hauteur sans se déformer */
 }
 
 /* MARKETING CONTENT
@@ -40,9 +52,11 @@ body {
   margin-bottom: 1.5rem;
   text-align: center;
 }
+
 .marketing h2 {
   font-weight: 400;
 }
+
 .marketing .col-lg-4 p {
   margin-right: 0.75rem;
   margin-left: 0.75rem;
@@ -64,7 +78,6 @@ body {
 
 /* RESPONSIVE CSS
 -------------------------------------------------- */
-
 @media (min-width: 40em) {
   /* Bump up size of carousel content */
   .carousel-caption p {
