--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -14,25 +14,12 @@ body {
 /*--------------------------------------------------------------
 # navbar
 --------------------------------------------------------------*/
-.navbar {
-  box-shadow: 0px 0px 10px 0.1rem rgba(0, 0, 0, 0.479);
-  box-shadow: 0px 0px 0.1rem black;
-  text-align: center;
-}
-
-.navbar-nav {
-  display: inline-block;
-  padding: 0;
-}
-
-.nav-item {
-  display: inline-block;
-  margin: 0 10px;
-}
 
 .nav-item a {
   text-decoration: none;
   color: #333;
+  position: relative;
+  display: inline-block;
 }
 
 .fusion-secondary-header {
@@ -66,7 +53,7 @@ body {
 }
 
 .navbar-custom {
-  background-color: #fffdd0;
+  background-color: #fefee2;
 }
 
 .navbar-custom .navbar-brand,
@@ -94,7 +81,6 @@ body {
   bottom: 0;
   height: 100%;
   background: rgba(0, 0, 0, 0.1);
-  z-index: -1;
   transform: scaleX(0);
   transform-origin: bottom right;
   transition: transform 0.25s ease-out;
@@ -103,7 +89,7 @@ body {
 .navbar-custom .nav-link:hover::before {
   transform: scaleX(1);
   transform-origin: bottom left;
-  background: rgba(0, 0, 0, 0.1);
+  background: rgba(0, 0, 0, 0.097);
 }
 
 .navbar-custom .nav-link:hover {
@@ -113,7 +99,7 @@ body {
 # Footer
 --------------------------------------------------------------*/
 .footer-custom {
-  background-color: #fffdd0;
+  background-color: #fefee2;
 }
 
 .footer-custom .text-dark {
