--- a/templates/shared/_carousel.html.twig
+++ b/templates/shared/_carousel.html.twig
@@ -3,7 +3,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 {% endblock %}
 
-<div id="myCarousel" class="carousel slide">
+<div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
 	<div class="carousel-indicators">
 		{% for key, header in headers %}
 			<button type="button" data-bs-target="#myCarousel" data-bs-slide-to="{{ key }}" class="{{ key == 0 ? 'active' : '' }}" aria-current="{{ key == 0 ? 'true' : 'false' }}" aria-label="Slide {{ key + 1 }}"></button>
@@ -33,6 +33,7 @@
 		<span class="visually-hidden">Next</span>
 	</button>
 </div>
+
 
 {% block javascripts %}
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
