--- a/templates/shared/_footer.html.twig
+++ b/templates/shared/_footer.html.twig
@@ -9,8 +9,8 @@
 			class="row my-4">
 			<!--Grid column-->
 			<div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-				<div class="rounded-circle bg-white shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto" style="width: 150px; height: 150px;">
-					<img src="" height="250" alt="" loading="lazy"/>
+				<div class=" shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto" style="width: 150px; height: 150px;">
+					<img src="/assets/img//file (1).png" height="250" alt="" loading="lazy"/>
 				</div>
 				<p class="text-center">Apicultrice et productrice de plantes médicales pour huiles essentielles</p>
 				<ul class="list-unstyled d-flex flex-row justify-content-center">
