--- a/templates/shared/_navbar.html.twig
+++ b/templates/shared/_navbar.html.twig
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-custom" data-bs-theme="light">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="{{ path('homepage') }}">Essence et Nectar</a>
+		<img src="/assets/img/file.png" style="width: 3%">
+		<a class="navbar-brand" href="{{ path('homepage') }}">Aromielis
+		</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
