--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5,6 +5,7 @@
 }
 
 body {
+  font-family: "Playfair Display", "open sans", serif;
   position: relative;
   height: 100%;
   text-decoration: none;
