customize badge for category

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -430,6 +430,31 @@ input[type="checkbox"]:focus {
 }
 
 /*--------------------------------------------------------------
+# Couleur badge catégories
+--------------------------------------------------------------*/
+.badge.category-huiles-essentielles {
+  background-color: #007bff; 
+  color: #fff;
+}
+
+.badge.category-recharges-hydrolats{
+  background-color: #28a745; 
+  color: #fff;
+}
+
+.badge.category-spray-hydrolat {
+  background-color: #ffc107; 
+  color: #000;
+}
+
+.badge.category-coffret {
+  background-color: #17a2b8;
+  color: #fff;
+}
+
+
+
+/*--------------------------------------------------------------
 # Page product_index
 --------------------------------------------------------------*/
 .product-item {
