--- a/templates/_partials/_product_card.html.twig
+++ b/templates/_partials/_product_card.html.twig
@@ -13,7 +13,7 @@
 			</span>
 		</h4>
 		<span class="d-flex flex-row align-items-center align-self-center flex-wrap">
-			<span class="badge bg-info me-1">{{ p.category.name }}</span>
+			<span class="badge category-{{ p.category.slug }} me-1">{{ p.category.name }}</span>
 		</span>
 		<hr>
 		<p class="card-text">
