update buttom advise page

--- a/templates/advise/index.html.twig
+++ b/templates/advise/index.html.twig
@@ -26,7 +26,7 @@
 											<h5>{{ advise.name }}</h5>
 											<p>{{ advise.subtitle }}</p>
 											<div class="btn-bar">
-												<a href="{{ path('advise_show', {'slug': advise.slug}) }}" class="btn btn-primary btn-read-more">
+												<a href="{{ path('advise_show', {'slug': advise.slug}) }}" class="custom-btn">
 													Lire plus
 												</a>
 											</div>
